--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,7 +1,9 @@
-<div class="container grey-text darken-4">
-  <h5>Ofrecer Producto o Servicio</h6>
+<div class="col-xs-8 col-xs-offset-2">
+	<div class="page-header">
+		<h3>Ofrecer Producto o Servicio</h3>
+	</div>
 
-  <%= render 'form' %>
-
-  <%= link_to 'Back', offers_path %>
+	<%= render 'form' %>
+	<br>
+	<%= link_to 'cancelar', offers_path, class:"btn btn-default" %>
 </div>
