--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,4 +5,5 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import 'form';
-@import 'profile'
+@import 'profile';
+@import 'bootstrap-social';
