--- a/app/views/clientprofiles/new.html.erb
+++ b/app/views/clientprofiles/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Clients Profile</h1>
+<div class="container">
+	<h3>Crear tu perfil</h3>
 
-<%= render 'form' %>
+	<%= render 'form' %>
 
-<%= link_to 'Back', clientprofiles_path %>
+	<%= link_to 'Volver', root_path %>
+
+</div>
