--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,29 @@
 <div class="container">
-  <h5>Registrarse</h5>
-  <% if session_path(resource) == "/users/sign_in" %>
-  <p class="center">
-    <%= icon("exclamation-triangle") %> Crea una cuenta para tu negocio o empresa y muestra tus productos o
-    servicios a los usuarios de <b>Estelí Live</b>
-  </p>
-  <% end %>
+  <div class="col-xs-8 col-xs-offset-2">
+  <h2>Crear una cuenta</h2>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6 col-md-4 col-md-offset-4">
-        <h1 class="text-center login-title">Crear una Cuenta</h1>
-        <div class="account-wall">
-          <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-          
-          <div class="form-signin">
-            <% unless session_path(resource) == "/users/sign_in" %>
-            <%= f.input :first_name, label: false, placeholder:"Nombre",autofocus: true, class:"form-control" %>
-            <%= f.input :last_name, label: false, placeholder:"Apellido",autofocus: true, class:"form-control" %>
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render partial:"devise/shared/errors", locals:{object: @user} %>
+    <% if session[:omniauth_errors] %>
+      <%= session[:omniauth_errors] %>
+    <% end %>
 
-            <% end %>
-            <%= f.email_field :email, placeholder:"Correo", class:'form-control email' %>
-            <%= f.password_field :password, placeholder:"Contraseña", autocomplete: "off", class:'form-control password' %>
-
-            <%= f.submit 'Iniciar', class:"btn btn-lg btn-primary btn-block" %>
-          </div>
-
-          <% end %>
-        </div>
-        <%= render 'devise/shared/links' %>
-      </div>
+    <div class="form-inputs">
+      <%= f.input :name, label:"Nombre" %>
+      <%= f.input :last_name, label:"Apellido" %>
+      <%= f.input :email, required: true, autofocus: true %>
+      <%= f.input :password, label:"Contraseña", required: true, hint: ("#{@minimum_password_length} caracteres como mínimo" if @minimum_password_length) %>
+      <%= f.input :password_confirmation, label:"Confirmar Contraseña", required: true %>
     </div>
-  </div>
 
+    <div class="form-actions">
+      <%= f.button :submit, "Crear Cuenta!", class:"btn btn-success" %>
+    </div>
+    <% end %>
+
+    <%= render "devise/shared/links" %>
+    <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
+
+
+  </div>
 </div>
