--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,19 +36,12 @@
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "Mi Perfil", myprofile_path %></li>
+              <li><%= if user_signed_in? then link_to("Mi Perfil", myprofile_path) 
+                  else link_to("Iniciar Sesión", new_user_session_path)
+                end %></li>
               <!-- Check for session -->
-              <% if user_signed_in? %>
-              <li><%= link_to('Cerrar Sesión', destroy_user_session_path, method: :delete, data:{confirm: "¿Quieres Cerrar tu Sessión Actual?"}) %>  </li>
-              <li><a href="">Socios</a></li>
-              <% elsif client_signed_in? %>
-              <li><a href="">Socios</a></li>
-              <li><%= link_to('Cerrar Sesión', destroy_user_session_path, method: :delete, data:{confirm: "¿Quieres Cerrar tu Sessión Actual?"}) %>  </li>
-              <% else %>
-              <li><%= link_to("Iniciar Sesión", new_client_session_path) %></li>
-              <% end %>
-              <!-- end -->
               <li role="separator" class="divider"></li>
+              <li><%= if user_signed_in? then link_to('Cerrar Sesión', destroy_user_session_path, method: :delete, data:{confirm: "¿Quieres Cerrar tu Sessión Actual?"}) end %>  </li>
               <li><a href="#">Ayuda</a></li>
             </ul>
           </li>
