--- a/app/views/welcome/_promo_profiles.html.erb
+++ b/app/views/welcome/_promo_profiles.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
-    <% if @promoved_profiles.present? %>
-    <% @promoved_profiles.each do |profile| %>
-    <div class="col-sm-6 col-md-4">
+    <% if promoved_profiles.present? %>
+    <% promoved_profiles.each do |profile| %>
+    <div class="col-sm-4 col-md-3">
         <div class="thumbnail">
             <%= link_to image_tag(profile.avatar(), class:"promo-img responsive-img"), profile %>
             <div class="caption center">
@@ -19,6 +19,7 @@
         </div>
     </div>
     <% end %>
-</div>
 <% end %>
+</div>
+
 
