--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <!--Tarjetas-->
   <h4>Recomendados</h4>
-  <%= render 'promo_profiles' %>
+  <%= render partial:'promo_profiles', locals:{promoved_profiles: @promoved_profiles} %>
 </div>
 
 <div class="container" style="max-width:700px;">
