--- a/app/views/menus/admin_panel.html.erb
+++ b/app/views/menus/admin_panel.html.erb
@@ -44,6 +44,8 @@
 				</div>
 			</div>
 		</div>
-		<div role="tabpanel" class="tab-pane fade" id="tab3"></div>
+		<div role="tabpanel" class="tab-pane fade" id="tab3">
+			<%= render'menus/admin_panel/users' %>
+		</div>
 	</div>
 </div>
