--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,4 +1,10 @@
-<%= render 'form' %>
+<div class="col-xs-8 col-xs-offset-2">
+	<div class="page-header">
+		<h3>Editar el perfil público</h3>
+	</div>
+	<%= render 'form' %>
 
-<%= link_to 'Show', @profile %> |
-<%= link_to 'Back', profiles_path %>
+	<%= link_to 'Show', @profile %> |
+	<%= link_to 'Back', profiles_path %>
+
+</div>
