--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Profile</h1>
+<div class="container">
+	<div class="page-header">
+		<h3>Crear Perfil para empresas</h3>
+	</div>
+	
+	<%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', profiles_path %>
+</div>
