--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <!--Tarjetas-->
-  <h4>Recomendados</h4>
+  <div class="alert alert-info"><h4>Recomendados</h4></div>
   <%= render partial:'promo_profiles', locals:{promoved_profiles: @promoved_profiles} %>
 </div>
 
 <div class="container" style="max-width:700px;">
   <% if client_signed_in? or user_signed_in? %>
-  <h4>Inicio</h4>
+  <div class="alert alert-info"><h4>Inicio</h4></div>
   <%= render @posts %>
 
   <div class="center">
@@ -18,7 +18,7 @@
 </div>
 
 <% else %>
-<h4>Tendencias</h4>
+<div class="alert alert-info"><h4>Tendencias</h4></div>
 <div class="center-block">
   <%= render @posts.sort_by { |post| post.hearts.count }.reverse %>
 
@@ -35,7 +35,7 @@
 </div>
 
 <div class="container" style="max-width:700px;">
-  <h4>Comentarios recientes</h4>
+  <div class="alert alert-info"><h4>Comentarios recientes</h4></div>
   <%= render @comments %>
   <div class="center">
    <ul class="pagination center">
