--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,3 +7,6 @@
 @import 'form';
 @import 'profile';
 @import 'bootstrap-social';
+@import 'owl.carousel';
+@import 'owl.theme';
+@import 'owl.transitions'
