--- a/app/views/clientprofiles/show.html.erb
+++ b/app/views/clientprofiles/show.html.erb
@@ -50,7 +50,7 @@
                     </b><%= @clientprofile.biography %>
                 </p>
             </div>
-            <% if client_signed_in? %>
+            <% if user_signed_in? %>
             <%= link_to "Editar tu Perfil", edit_clientprofile_path, class:"btn btn-warning"%>
             <% end %>
 
