--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <div class="col-xs-8 col-xs-offset-2">
-  <h2>Crear una cuenta</h2>
+    <h2>Crear una cuenta</h2>
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render partial:"devise/shared/errors", locals:{object: @user} %>
     <% if session[:omniauth_errors] %>
-      <%= session[:omniauth_errors] %>
+    <%= session[:omniauth_errors] %>
     <% end %>
 
     <div class="form-inputs">
@@ -20,9 +20,17 @@
       <%= f.button :submit, "Crear Cuenta!", class:"btn btn-success" %>
     </div>
     <% end %>
+    
+    <br>
+
+    <div class="center" style="max-width: 220px">
+      <%= link_to user_facebook_omniauth_authorize_path, class:"btn btn-block btn-social btn-facebook" do %>
+      <span class="fa fa-facebook"></span> Iniciar con Facebook
+      <% end %>
+    </div>
+
 
     <%= render "devise/shared/links" %>
-    <%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
 
 
   </div>
