--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,4 @@
+<div class="col-xs-12">
   <% color ||= 'primary' %>
   <div class="panel panel-<%= color %>">
     <div class="panel-heading">
@@ -5,11 +6,7 @@
       <b class="panel-title"><%= link_to post.profile.name, post.profile %></b>
 
       <!--Acciones para los posts-->
-      <div class="pull-right actions-post">
-        <%= post_edit(post) %>
-        <%= post_delete(post) %>
-        <%= pin_post(post) %>
-      </div>
+      <%= render partial:"posts/post_actions", locals:{post:post} %>
 
     </div>
 
@@ -20,13 +17,13 @@
       <% if post.pictures.count > 1 %>
       <div class="fotorama" data-nav="thumbs" data-allowfullscreen="true">
         <% post.pictures.each do |pic| %>
-          <a href="<%= pic.image.url() %>"><img src="<%= pic.image.url(:thumb)%>"></a>
+        <a href="<%= pic.image.url() %>"><img src="<%= pic.image.url(:thumb)%>"></a>
         <% end %>
       </div>
       <% else %>
-        <% post.pictures.each do |pic| %>
-        <%= image_tag(pic.image.url, class:"responsive-img center-block", lazy: true)%>
-        <% end %>
+      <% post.pictures.each do |pic| %>
+      <%= image_tag(pic.image.url, class:"responsive-img center-block lazyOwl", lazy: true)%>
+      <% end %>
 
       <% end %>
 
@@ -36,18 +33,19 @@
 
     <div class="panel-footer">
       <div class="row center">
-              <%= div_for(post, class: "col-xs-4 center-block") do %>
-      <%= render partial: "hearts/button", locals: {post: post} %>
-      <% end %>
-      <div class="col-xs-4 center-block">
-        <%= link_to post do %>
-        <%= icon('comments',style:'font-size:2rem;') %>
+        <%= div_for(post, class: "col-xs-4 center-block") do %>
+        <%= render partial: "hearts/button", locals: {post: post} %>
         <% end %>
-      </div>
-      <div class="col-xs-4 center-block">
-        <%= icon('share-alt',style:'font-size:2rem;') %>
-      </div>
+        <div class="col-xs-4 center-block">
+          <%= link_to post do %>
+          <%= icon('comments',style:'font-size:2rem;') %>
+          <% end %>
+        </div>
+        <div class="col-xs-4 center-block">
+          <%= icon('share-alt',style:'font-size:2rem;') %>
+        </div>
       </div>
     </div>
 
   </div>
+</div>
