--- a/app/views/welcome/_promo_profiles.html.erb
+++ b/app/views/welcome/_promo_profiles.html.erb
@@ -1,7 +1,7 @@
-<div class="row">
+<div id="owl-promo" class="owl-carousel">
     <% if promoved_profiles.present? %>
     <% promoved_profiles.each do |profile| %>
-    <div class="col-sm-4 col-md-3">
+    <div class="col-xs-12">
         <div class="thumbnail">
             <%= link_to image_tag(profile.avatar(), class:"promo-img responsive-img"), profile %>
             <div class="caption center">
