--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,9 +4,15 @@
 
 <div class="tab-content">
   <div role="tabpanel" class="tab-pane active container" style="max-width:700px;" id="tab1">
-  <% if my_profile?(@profile) %>
+
+    <% if my_profile?(@profile) %>
+    <br>
+    <div class="jumbotron">
+    <b>Publicacion ŕapida</b>
     <%= render"/posts/form" %>
+    </div>
   <% end %>
+
     <% if @profile.posts.present? %>
     <% if @pinned.present? %>
     <div class="page-header">
