--- a/app/views/follows/_followbtn.html.erb
+++ b/app/views/follows/_followbtn.html.erb
@@ -1,20 +1,8 @@
-<% if client_signed_in? %>
-  <% if current_client.follow?(@profile) %>
-    <%= button_to unfollow_path(profile_id: profile.id), remote: true,id:"follow", class:"btn small green", method: :delete do%>
-      <%= icon("star") %>
-      Siguiendo
-    <% end %>
+<% if user_signed_in? %>
+  <% if current_user.follow?(profile) %>
+    <%= link_to 'Siguiendo', unfollow_path(profile_id: profile.id), remote: true,id:"follow", class:"btn btn-lg btn-success", method: :delete %>
   <% else %>
-    <%= button_to follow_path(profile_id: profile.id), class:"btn small grey", remote: true, id:"follow" do %>
-      <%= icon("heart") %>
-      Seguir
-      <% end %>
+    <%= button_to "Seguir", follow_path(profile_id: profile.id), class:"btn btn-lg btn-primary",  remote: true, id:"follow" %>
   <% end %>
 
-<% else %>
-  <% if user_signed_in? %>
-    <% if current_user.id == @profile.user_id %>
-IGUAL
-<% end %>
-  <% end %>
 <% end %>
