--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -25,7 +25,7 @@
     </ul>
   <% end %>
 
-  <% if editor(current_client) %>
+  <% if editor(current_user) %>
         <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
             <a href="<%= new_wiki_path %>" class="btn-floating btn-large red">
               <%= icon('plus',class:'large material-icons') %>
