--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,10 +1,7 @@
 <div class="col-xs-8 col-xs-offset-2">
 	<div class="page-header">
 		<h3>Editar el perfil público</h3>
+		<%= link_to "Ver perfil", @profile, class:"btn btn-default" %>
 	</div>
 	<%= render 'form' %>
-
-	<%= link_to 'Show', @profile %> |
-	<%= link_to 'Back', profiles_path %>
-
 </div>
