Use social share gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,4 +9,5 @@
 @import 'bootstrap-social';
 @import 'owl.carousel';
 @import 'owl.theme';
-@import 'owl.transitions'
+@import 'owl.transitions';
+@import "social-share-button";
