--- a/app/views/follows/unfollow.js.erb
+++ b/app/views/follows/unfollow.js.erb
@@ -1,3 +1,3 @@
 $("#follow_profile").html("<%= j render(partial:'/follows/followbtn', locals:{profile: @profile}) %>")
 
-$("#<%= dom_id(@profile) %>").html("<%= j render(partial: '/follows/followbtn', locals: { profile: @profile }) %>")
+$("#<%= dom_id(@profile) %>").html("<%= j render(partial: '/follows/followbtn_small', locals: { profile: @profile }) %>")
