--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
         <ul class="nav navbar-nav">
           <li><a href="/">Inicio</a></li>
           <li><%= link_to("Descubrir", categories_path) %></li>
-          <li><%= link_to("Anuncios Clasificados", markets_path) %></li>
+          <li><%= link_to("Favoritos", favorites_path) %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opciones <span class="caret"></span></a>
             <ul class="dropdown-menu white-text">
